--- a/src/main/resources/static/css/register.css
+++ b/src/main/resources/static/css/register.css
@@ -1,1 +1,6 @@
 
+footer {
+    position: sticky;
+    margin-top: 85px;
+    top: 100vh;
+}
